--- a/css/promotion.css
+++ b/css/promotion.css
@@ -1,15 +1,15 @@
 @charset "utf-8";
 /* 프로모션 */
 .promotion .inner{
-  
+ 
 }
 .promotion .section-top{
     display: none;
 }
 .sw-promotion a{
-    display: block;
-    border-radius: 13px;
-    overflow: hidden;
+    display: inline-block;
+border-radius: 13px;
+overflow: hidden;
 }
 .sw-promotion a img{
     width: 100%;
@@ -20,8 +20,4 @@
     position: relative;
     text-align: center;
     display: none;
-}
-.sw-promotion-pg{
-    height: 100%;
-    margin-top: 10px;
 }
